# llm-watermarking-game

./: .env.example  .gitignore  README.md  pyproject.toml
LLM-Watermark-Attacks/: README.md
data/: test.jsonl
outputs/: attack_data_exp_detection_qa.jsonl  attack_data_exp_detection_summarization.jsonl  attack_data_exp_detection_translation.jsonl  attack_data_exp_frequency_qa.jsonl  attack_data_exp_frequency_summarization.jsonl  attack_data_exp_frequency_translation.jsonl  attack_data_exp_none_qa.jsonl  attack_data_exp_none_summarization.jsonl  attack_data_exp_none_translation.jsonl  attack_data_exp_paraphrase_qa.jsonl  attack_data_exp_paraphrase_summarization.jsonl  attack_data_exp_paraphrase_translation.jsonl  attack_data_exp_translation_qa.jsonl  attack_data_exp_translation_summarization.jsonl  attack_data_exp_translation_translation.jsonl  attack_data_kgw_detection_qa.jsonl  attack_data_kgw_detection_summarization.jsonl  attack_data_kgw_detection_translation.jsonl  attack_data_kgw_frequency_qa.jsonl  attack_data_kgw_frequency_summarization.jsonl  attack_data_kgw_frequency_translation.jsonl  attack_data_kgw_none_qa.jsonl  attack_data_kgw_none_summarization.jsonl  attack_data_kgw_none_translation.jsonl  attack_data_kgw_paraphrase_qa.jsonl  attack_data_kgw_paraphrase_summarization.jsonl  attack_data_kgw_paraphrase_translation.jsonl  attack_data_kgw_translation_qa.jsonl  attack_data_kgw_translation_summarization.jsonl  attack_data_kgw_translation_translation.jsonl  attack_data_unigram_detection_qa.jsonl  attack_data_unigram_detection_summarization.jsonl  (+13 more)
src/: main.sh  (+9 more)
(+76 files in other folders)
