[project]
name = "wmgame"
version = "0.1.0"
description = "LLM Watermarking Game"
readme = "README.md"
authors = []
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "cython-npm>=0.2.4",
    "homoglyphs>=2.0.4",
    "nltk>=3.9.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
